--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ Thumbs.db
 # Folder config file
 Desktop.ini
 /AlgoritimosEstruturaDados/nbproject/private/
+/AlgoritmosGeometricos/nbproject/private/
