--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ Thumbs.db
 Desktop.ini
 /AlgoritimosEstruturaDados/nbproject/private/
 /AlgoritmosGeometricos/nbproject/private/
+/Arquivos/nbproject/private/
