--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ Desktop.ini
 /AlgoritimosEstruturaDados/nbproject/private/
 /AlgoritmosGeometricos/nbproject/private/
 /Arquivos/nbproject/private/
+/ArrayUniBidimensional/nbproject/private/
