--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ Desktop.ini
 /AlgoritmosGeometricos/nbproject/private/
 /Arquivos/nbproject/private/
 /ArrayUniBidimensional/nbproject/private/
+/Arremato.com/nbproject/private/
