--- a/Arquivos/nbproject/project.properties
+++ b/Arquivos/nbproject/project.properties
@@ -1,10 +1,10 @@
-#Sat Sep 09 21:36:26 BRT 2017
+#Sat Sep 23 13:48:02 BRT 2017
 excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
+javac.external.vm=false
 run.classpath=${javac.classpath}\:${build.classes.dir}
 javadoc.nonavbar=false
-javac.external.vm=false
 run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 javac.processorpath=${javac.classpath}
@@ -29,33 +29,28 @@ build.sysclasspath=ignore
 debug.test.classpath=${run.test.classpath}
 dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
-javadoc.splitindex=true
 javadoc.encoding=${source.encoding}
+javadoc.splitindex=true
 javac.source=1.8
 application.vendor=crhobus
-junit.selected.version=4
+junit.selected.version=3
 debug.classpath=${run.classpath}
 run.jvmargs=
-build.generated.dir=${build.dir}/generated
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 jar.compress=false
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+build.generated.dir=${build.dir}/generated
 javadoc.private=false
 annotation.processing.run.all.processors=true
 application.title=Arquivos
 meta.inf.dir=${src.dir}/META-INF
-manifest.file=manifest.mf
 annotation.processing.enabled=true
+manifest.file=manifest.mf
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
-mkdist.disabled=false
 endorsed.classpath=
-javac.classpath=
+mkdist.disabled=false
 annotation.processing.enabled.in.editor=false
+javac.classpath=
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
