--- a/netbeans-projects/Calculadora/nbproject/project.properties
+++ b/netbeans-projects/Calculadora/nbproject/project.properties
@@ -1,26 +1,14 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-application.title=Calculadora
-application.vendor=crhobus
-endorsed.classpath=
-#Sun Oct 15 13:16:13 BRST 2017
+#Sun Oct 15 13:45:26 BRST 2017
 excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
 javac.external.vm=false
-javac.processorpath=\
-    ${javac.classpath}
-mkdist.disabled=false
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
+run.classpath=${javac.classpath}\:${build.classes.dir}
 javadoc.nonavbar=false
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+javac.processorpath=${javac.classpath}
 javac.target=1.6
+annotation.processing.processors.list=
 javadoc.noindex=false
 javadoc.additionalparam=
 includes=**
@@ -39,27 +27,29 @@ build.sysclasspath=ignore
 debug.test.classpath=${run.test.classpath}
 dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
-javadoc.encoding=${source.encoding}
 javadoc.splitindex=true
+javadoc.encoding=${source.encoding}
 javac.source=1.6
-junit.selected.version=4
+application.vendor=crhobus
+junit.selected.version=3
 debug.classpath=${run.classpath}
 run.jvmargs=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
-build.generated.dir=${build.dir}/generated
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 jar.compress=false
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+build.generated.dir=${build.dir}/generated
 javadoc.private=false
+annotation.processing.run.all.processors=true
+application.title=Calculadora
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=manifest.mf
+annotation.processing.enabled=true
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
+endorsed.classpath=
+mkdist.disabled=false
 javac.classpath=
+annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
