--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ local.properties
 **/.settings/
 **/.loadpath
 **/.recommenders
+**/RemoteSystemsTempFiles
 
 # External tool builders
 **/.externalToolBuilders/
