--- a/netbeans-projects/ContaBanco/nbproject/project.properties
+++ b/netbeans-projects/ContaBanco/nbproject/project.properties
@@ -1,4 +1,4 @@
-#Sun Dec 17 15:40:54 BRST 2017
+#Tue Dec 19 09:03:24 BRST 2017
 excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
@@ -27,18 +27,13 @@ build.classes.excludes=**/*.java,**/*.form
 javadoc.encoding=${source.encoding}
 javadoc.splitindex=true
 javac.source=1.6
-junit.selected.version=4
+junit.selected.version=3
 debug.classpath=${run.classpath}
 run.jvmargs=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 build.generated.dir=${build.dir}/generated
 jar.compress=false
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 javadoc.private=false
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=manifest.mf
