--- a/netbeans-projects/CriacaoPDF/nbproject/project.properties
+++ b/netbeans-projects/CriacaoPDF/nbproject/project.properties
@@ -1,4 +1,4 @@
-#Sun Dec 17 15:49:05 BRST 2017
+#Tue Dec 19 09:03:38 BRST 2017
 excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
@@ -26,34 +26,29 @@ build.sysclasspath=ignore
 debug.test.classpath=${run.test.classpath}
 dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
-javadoc.splitindex=true
 javadoc.encoding=${source.encoding}
+javadoc.splitindex=true
 javac.source=1.6
 application.vendor=Caio
-junit.selected.version=4
+junit.selected.version=3
 debug.classpath=${run.classpath}
 run.jvmargs=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
-build.generated.dir=${build.dir}/generated
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 jar.compress=false
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+build.generated.dir=${build.dir}/generated
 javadoc.private=false
 annotation.processing.run.all.processors=true
 application.title=CriacaoPDF
 meta.inf.dir=${src.dir}/META-INF
-manifest.file=manifest.mf
 annotation.processing.enabled=true
+manifest.file=manifest.mf
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
-mkdist.disabled=false
 endorsed.classpath=
-javac.classpath=${libs.Itext_1.02b.classpath}
+mkdist.disabled=false
 annotation.processing.enabled.in.editor=false
+javac.classpath=${libs.Itext_1.02b.classpath}
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
