--- a/netbeans-projects/Java/nbproject/project.properties
+++ b/netbeans-projects/Java/nbproject/project.properties
@@ -1,12 +1,22 @@
-#Tue Dec 19 13:42:18 BRST 2017
+application.title=Java
+application.vendor=crhobus
+endorsed.classpath=
+#Wed Dec 20 12:05:07 BRST 2017
 excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
-run.classpath=${javac.classpath}\:${build.classes.dir}
+javac.external.vm=false
+mkdist.disabled=false
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javadoc.nonavbar=false
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 javac.target=1.6
 annotation.processing.processors.list=
 javadoc.noindex=false
@@ -28,30 +38,28 @@ build.sysclasspath=ignore
 debug.test.classpath=${run.test.classpath}
 dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
-annotation.processing.processor.options=
-javadoc.splitindex=true
 javadoc.encoding=${source.encoding}
+javadoc.splitindex=true
 javac.source=1.6
-junit.selected.version=4
+junit.selected.version=3
 debug.classpath=${run.classpath}
 run.jvmargs=
-build.generated.dir=${build.dir}/generated
-jar.compress=false
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}
+jar.compress=false
+build.generated.dir=${build.dir}/generated
 javadoc.private=false
 annotation.processing.run.all.processors=true
 meta.inf.dir=${src.dir}/META-INF
-manifest.file=manifest.mf
 annotation.processing.enabled=true
+manifest.file=manifest.mf
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
-javac.classpath=
 annotation.processing.enabled.in.editor=false
+javac.classpath=
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
