--- a/netbeans-projects/Operacoes/nbproject/project.properties
+++ b/netbeans-projects/Operacoes/nbproject/project.properties
@@ -1,10 +1,25 @@
-#Wed Dec 20 17:02:14 BRST 2017
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
+application.title=Operacoes
+application.vendor=crhobus
+endorsed.classpath=
+#Fri Dec 22 09:17:01 BRST 2017
 excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
-run.classpath=${javac.classpath}\:${build.classes.dir}
+javac.external.vm=false
+javac.processorpath=\
+    ${javac.classpath}
+mkdist.disabled=false
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javadoc.nonavbar=false
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 javac.target=1.6
 javadoc.noindex=false
 javadoc.additionalparam=
@@ -27,7 +42,7 @@ build.classes.excludes=**/*.java,**/*.form
 javadoc.encoding=${source.encoding}
 javadoc.splitindex=true
 javac.source=1.6
-junit.selected.version=4
+junit.selected.version=3
 debug.classpath=${run.classpath}
 run.jvmargs=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
@@ -36,7 +51,6 @@ jar.compress=false
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}
 javadoc.private=false
