--- a/eclipse-projects/folha-ponto-backend/src/main/resources/application.properties
+++ b/eclipse-projects/folha-ponto-backend/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/folhaponto?useTimezone=true&serverTimezone=UTC
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=key50100
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/develop?currentSchema=folhaponto
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 jwt.secret=4wb71@Z9P8$41Ou7xqr5G@736loz$RgUj67f4a
 jwt.expiration=3600
