--- a/eclipse-projects/app-produtos/pom.xml
+++ b/eclipse-projects/app-produtos/pom.xml
@@ -51,6 +51,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>18.4.0.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
