--- a/eclipse-projects/app-produtos/src/main/resources/application-dev.properties
+++ b/eclipse-projects/app-produtos/src/main/resources/application-dev.properties
@@ -3,5 +3,5 @@ spring.profiles.active=dev
 spring.datasource.url=jdbc:mysql://localhost:3306/produto?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=key50100
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
