--- a/eclipse-projects/app-produtos/src/main/resources/application.properties
+++ b/eclipse-projects/app-produtos/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
+spring.jpa.show-sql=true
+
 server.port=${port:8084}
