--- a/eclipse-projects/folha-ponto-backend/src/main/resources/application.properties
+++ b/eclipse-projects/folha-ponto-backend/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
+#Security: Assinatura digital do token JWT - Utilizado na validação do token
 jwt.secret=4wb71@Z9P8$41Ou7xqr5G@736loz$RgUj67f4a
+#Security: Tempo de expiração do token em segundos, ex 1 hora
 jwt.expiration=3600
 
 server.port=${port:8084}
