--- a/eclipse-projects/folha-ponto-backend/src/main/resources/application-test.properties
+++ b/eclipse-projects/folha-ponto-backend/src/main/resources/application-test.properties
@@ -1,8 +1,12 @@
+# Profile de testes
 spring.profiles.active=test
 
+# Configurações do banco de dados H2
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS FOLHAPONTO_TEST\\;SET SCHEMA FOLHAPONTO_TEST
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# Pasta do FlyWayDB onde deve executar a migração do H2
 spring.flyway.locations=classpath:/db/migration/common,classpath:/db/migration/h2
