--- a/eclipse-projects/folha-ponto-backend/pom.xml
+++ b/eclipse-projects/folha-ponto-backend/pom.xml
@@ -28,6 +28,12 @@
 
 	<dependencies>
 
+		<!-- Core do spring -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
 		<!-- Infraestrutura para utilizar na web, com http, tomcat, etc. Possuindo 
 			utilitários para web, como criação de controles, endpoints de apis, etc. -->
 		<dependency>
@@ -47,9 +53,10 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<!-- Hibernate Validator -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
 		<dependency>
