--- a/eclipse-projects/folha-ponto-backend/src/main/resources/application-prod.properties
+++ b/eclipse-projects/folha-ponto-backend/src/main/resources/application-prod.properties
@@ -1,8 +1,12 @@
+# Profile de produção
 spring.profiles.active=prod
 
+# Configurações do banco de dados PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/develop?currentSchema=folhaponto
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Pasta do FlyWayDB onde deve executar a migração do PostgreSQL
 spring.flyway.locations=classpath:/db/migration/common,classpath:/db/migration/postgresql
