--- a/eclipse-projects/java-app/pom.xml
+++ b/eclipse-projects/java-app/pom.xml
@@ -17,6 +17,7 @@
 		<maven.compiler.source>14</maven.compiler.source>
 		<maven.compiler.target>14</maven.compiler.target>
 		<log4j-core-version>2.13.1</log4j-core-version>
+		<commons-lang3-version>3.11</commons-lang3-version>
 	</properties>
 
 	<dependencies>
@@ -25,6 +26,12 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>${log4j-core-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang3-version}</version>
 		</dependency>
 
 	</dependencies>
